hphp/test/zend/good/ext/posix/tests/posix_getpid_basic.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if (!extension_loaded('posix')) die('skip - POSIX extension not loaded');
}
