hphp/test/zend/bad/ext/phar/tests/phar_get_supported_signatures_002.php.skipif
<?php
if (!extension_loaded("phar")) die("skip");
if (!extension_loaded("hash")) die("skip extension hash required");
$arr = Phar::getSupportedSignatures();
if (in_array("OpenSSL", $arr)) die("skip openssl support enabled");
if (!in_array('SHA-256', $arr)) die("skip hash extension loaded shared");
?>